force-app/main/default/objects/leaseworks__LOC_Transactions__c/leaseworks__LOC_Transactions__c.object-meta.xml
<CustomObject>
    <description>Use Letter of Credit Transactions to manage every action impacting your Letter of Credit, from drawdowns to adjustments that increase or decrease the available amount.</description>
    <label>LOC Transactions</label>
    <nameField>
        <label>Transactions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LOC Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>