force-app/main/default/objects/leaseworks__LOC_Transactions__c/fields/Contract_ID_Local__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID_Local__c</fullName>
    <label>Contract ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>