force-app/main/default/objects/leaseworks__LOC_Transactions__c/fields/leaseworks__Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>