force-app/main/default/objects/leaseworks__LOC_Transactions__c/fields/leaseworks__Entity_name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Entity_name__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2410_Entity name</label>
    <type>Text</type>
</CustomField>