force-app/main/default/objects/leaseworks__LOC_Transactions__c/fields/leaseworks__Escalation_percentage__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Escalation_percentage__c</fullName>
    <formula>leaseworks__LOC_Schedule__r.leaseworks__Escalation_Percentage__c</formula>
    <inlineHelpText>Applicable annual escalation percentage for the schedule.</inlineHelpText>
    <label>Escalation Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>