force-app/main/default/objects/leaseworks__LOC_Transactions__c/fields/leaseworks__IsManualLOCSchedule__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IsManualLOCSchedule__c</fullName>
    <description>This field is intended to distinguish between manual LOC  transactions uploaded through Excel and manual LOC transactions created through the New button. It&#39;s specifically designed for the Flexi page filter condition.</description>
    <formula>IF(AND(NOT(ISBLANK( leaseworks__Start_Date__c )),ISBLANK( leaseworks__LOC_Schedule__c )),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_IsManualLOCSchedule</label>
    <type>Checkbox</type>
</CustomField>