force-app/main/default/objects/leaseworks__LOC_Transactions__c/fields/leaseworks__Issued__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this if the adjustment amount has been issued. Note: Enabling this option will update the LOC remaining balance.</inlineHelpText>
    <label>Issued</label>
    <type>Checkbox</type>
</CustomField>