force-app/main/default/objects/leaseworks__LOC_Transactions__c/fields/leaseworks__Letter_Of_Credit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Letter_Of_Credit__c</fullName>
    <label>Letter Of Credit</label>
    <referenceTo>leaseworks__Letter_Of_Credit__c</referenceTo>
    <relationshipLabel>LOC Transactions</relationshipLabel>
    <relationshipName>LOC_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>