force-app/main/default/objects/leaseworks__LOC_Transactions__c/fields/leaseworks__LOC_Schedule__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LOC_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOC Schedule</label>
    <referenceTo>leaseworks__LOC_Schedule__c</referenceTo>
    <relationshipLabel>LOC Transactions</relationshipLabel>
    <relationshipName>LOC_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>