force-app/main/default/objects/leaseworks__LOC_Transactions__c/fields/leaseworks__Percentage__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Percentage__c</fullName>
    <label>Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>