force-app/main/default/objects/leaseworks__LOC_Transactions__c/fields/LOC_Drawndown_Local__c.field-meta.xml
<CustomField>
    <fullName>LOC_Drawndown_Local__c</fullName>
    <label>LOC Drawndown?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>