force-app/main/default/objects/leaseworks__LOC_Transactions__c/recordTypes/leaseworks__Adjustment.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Adjustment</fullName>
    <active>true</active>
    <label>Adjustment</label>
</RecordType>