force-app/main/default/objects/leaseworks__LOC_Transactions__c/recordTypes/leaseworks__Drawdown.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Drawdown</fullName>
    <active>true</active>
    <label>Drawdown</label>
</RecordType>