force-app/main/default/objects/leaseworks__LOC_Transactions__c/validationRules/leaseworks__Base_Amount_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Base_Amount_cannot_be_blank</fullName>
    <active>true</active>
    <description>Field Base Amount cannot be blank to create a transaction</description>
    <errorConditionFormula>ISNULL(leaseworks__Letter_Of_Credit__r.leaseworks__LC_Amount_LC_Currency__c)</errorConditionFormula>
    <errorMessage>To save a Transaction the field Base Amount on Letter of Credit cannot be blank</errorMessage>
</ValidationRule>