force-app/main/default/objects/leaseworks__LOC_Transactions__c/validationRules/leaseworks__Field_value_cannot_exceed_100.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Field_value_cannot_exceed_100</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND( ISPICKVAL( leaseworks__Type__c , &apos;Percentage&apos;), leaseworks__Percentage__c  &gt; 1) , true, false)</errorConditionFormula>
    <errorDisplayField>leaseworks__Percentage__c</errorDisplayField>
    <errorMessage>Percentage value cannot exceed 100%.</errorMessage>
</ValidationRule>