force-app/main/default/objects/leaseworks__LOC_Transactions__c/validationRules/leaseworks__Field_value_should_be_higher_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Field_value_should_be_higher_than_zero</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND(  ISPICKVAL( leaseworks__Type__c , &#39;Percentage&#39;), leaseworks__Percentage__c  &lt;= 0), true, false)</errorConditionFormula>
    <errorDisplayField>leaseworks__Percentage__c</errorDisplayField>
    <errorMessage>Percentage value should be higher than 0.</errorMessage>
</ValidationRule>