force-app/main/default/objects/leaseworks__LOC_Transactions__c/validationRules/leaseworks__Negative_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Negative_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>leaseworks__Amount__c</errorDisplayField>
    <errorMessage>The field Amount can&apos;t have negative value.</errorMessage>
</ValidationRule>