force-app/main/default/objects/leaseworks__LOC_Transactions__c/validationRules/leaseworks__No_Negative_and_Zero_on_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__No_Negative_and_Zero_on_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND( ISPICKVAL( leaseworks__Type__c , &apos;Amount&apos;), leaseworks__Amount__c = 0) , true, false)</errorConditionFormula>
    <errorDisplayField>leaseworks__Amount__c</errorDisplayField>
    <errorMessage>The field Amount can&apos;t be 0</errorMessage>
</ValidationRule>