force-app/main/default/objects/leaseworks__LOC_Transactions__c/validationRules/leaseworks__Status_is_Apprved_and_Entity_Is_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Status_is_Apprved_and_Entity_Is_Inactive</fullName>
    <active>true</active>
    <description>To Check Entity is Inactive when Drawdown is approved.</description>
    <errorConditionFormula>AND(
RecordType.Name = &quot;Drawdown&quot;,
!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,
NOT( ISNEW()),
ISCHANGED(leaseworks__Status__c),
ISPICKVAL(PRIORVALUE(leaseworks__Status__c), &apos;Pending&apos;),
ISPICKVAL(leaseworks__Status__c,&apos;Open for Payment Studio&apos;),
leaseworks__AccEnabled__c,
leaseworks__Entity_New__r.leaseworks__Inactive__c
)</errorConditionFormula>
    <errorMessage>Unable to update the Drawdown status to &apos;Cash Received&apos; since the entity associated with the Drawdown is inactive. Please link it to an active entity to proceed.</errorMessage>
</ValidationRule>