force-app/main/default/objects/leaseworks__LOC_Transactions__c/validationRules/leaseworks__Transactions_cannot_exceed_Remaining_Bal.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Transactions_cannot_exceed_Remaining_Bal</fullName>
    <active>false</active>
    <description>Transactions cannot exceed Remaining Balance</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Transactions cannot exceed Remaining Balance on the Letter of Credit</errorMessage>
</ValidationRule>