force-app/main/default/objects/leaseworks__LOC_Transactions__c/validationRules/leaseworks__Validate_Drawdown_LOC_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Validate_Drawdown_LOC_Status</fullName>
    <active>true</active>
    <description>Prevents Drawdown creation if the Letter of Credit status is not &quot;Active&quot;</description>
    <errorConditionFormula>AND(
!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c, ISNEW(), 
RecordType.DeveloperName = &quot;Drawdown&quot;, 
    NOT(ISPICKVAL(leaseworks__Letter_Of_Credit__r.leaseworks__Status__c, &quot;Active&quot;))
)</errorConditionFormula>
    <errorMessage>Drawdown cannot be generated for a pending letter of credit. Please mark letter of credit as &#39;Active&#39; to proceed.</errorMessage>
</ValidationRule>