force-app/main/default/objects/leaseworks__LOC_Transactions__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>